# shadertools

./: .gitignore  .pytest.toml  COPYING.txt  pyproject.toml  scene.py  scene1.py  shader.fs  shader_cyber_fuji_2020.fs
.github/: copilot-instructions.md
.github/workflows/: main.yml
bad_apple/: dl_video.sh
shadertools/: camera.py  compiler.py  material.py  math.py  scene.py  viewer.py  window.py
shadertools/data/shaders/: fractal.fs  main.fs  main.vs
shadertools/templates/: acsl.txt
shadertools/templates/shaders/: main.fs  shadertoy.fs  utils.glsl
src/shadertools/: __init__.py  compiler.py  geometry.py  loaders.py  math.py  scene.py  shader.py  viewer.py  window.py
src/shadertools/hll/: __init__.py  camera.py  geometry.py  material.py  math.py
src/shadertools/templates/: buffer_a.fs  image.fs
src/shadertools/templates/shaders/: base.fs  base_st.fs  glsl.fs  sdf_primitives.fs  st.fs
tests/: conftest.py  test_camera.py  test_compiler.py  test_geometry.py  test_loader.py  test_math.py  test_scene.py  tests_bla.py
tests/data/: scene.fs  scene.py  scene.st.fs
