[project]
name = "shadertools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1.6", "moderngl-window>=3.1.1"]

[dependency-groups]
test = ["pytest>=9.0.1", "pytest-cov>=7.0.0", "pytest-xdist[psutil]>=3.8.0"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"